# OneTimeSecret

./: .dockerignore  .env.example  README.md  docker-compose-local.yml  docker-compose-prod.yml  dockerfile  pyproject.toml  run.py  setup.cfg
api/secret/: dependencies.py  endpoints.py  models.py  router.py  schemas.py  services.py  task.py  utils.py
config/: lifespan.py  mongodb.py  settings.py  settings_deprecated.py
tests/integration/: conftest.py
tests/integration/secret_api/: test_secret_api.py
tests/unit/secret_api/: test_secret_services.py
