[tool.poetry]
name = "one-time-sеcret"
version = "0.1.0"
description = ""
authors = ["Blagovest Nedkov <purechromas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
beanie = "^1.23.1"
cryptography = "^41.0.5"
apscheduler = {extras = ["asyncio"], version = "^3.10.4"}
httpx = "^0.25.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ ".", "tests"]
asyncio_mode="auto"